@@ -6,7 +6,7 @@
 # and then shutdown and disable any that are not declared in a Puppet
 # manifest (or ignore list/file) somewhere.
 #
-# The following services will *never* be killed by svckill:
+# By default, the following services will *never* be killed by svckill:
 #   * amtu
 #   * blk-availability
 #   * crond
@@ -34,6 +34,14 @@
 #   * sshd
 #   * sysstat
 #   * udev-post
+#
+# You may override the default ignore list in hiera, with the use of a
+# knockout prefix '--'. For example, to remove sshd from the default
+# whitelist:
+#
+# ---
+# svckill::ignore:
+#   - '--sshd'
 #
 # @param enable
 #   Enable svckill on the system
@@ -85,7 +93,7 @@ class svckill (
     $flattened_ignore_files = flatten([$ignore_files, $::svckill::ignore::collector::default_ignore_file])
 
     svckill { 'svckill':
-      ignore      => $combined_ignore_list,
+      ignore      => simplib::knockout($combined_ignore_list),
       ignorefiles => $flattened_ignore_files,
       verbose     => $verbose,
       mode        => $mode,
